--- a/Programación-Web-I/tp/CSS/style.css
+++ b/Programación-Web-I/tp/CSS/style.css
@@ -1,3 +1,4 @@
+/*Estilos Generales*/
 *{
   box-sizing: border-box;
   margin: 0;
@@ -18,18 +19,41 @@ body {
   font-family: 'Nunito', sans-serif;
   line-height: 1.6;
 }
+
+h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin: 20px 0;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+h3{
+  font-size: 2rem;
+}
+
+p{
+  color: #000;
+}
+/*Estilos del Header*/
 header {
   background-color: #87CEFA;
   padding-top: 1rem;
   padding-left: 1rem;
   display: flex; 
   align-items: center; 
-  
+  position: relative;
+  width: 100%;
+  height: 16rem;
 }
 
 .logo img {
-  width: 200px;
-  height: 200px;
+  width: 15rem;
+  height: 15rem;
 }
 
 .nav-container {
@@ -105,38 +129,34 @@ nav a {
   display: block;
 }
 
+.login-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  color: #000;
+  background-color: #FFFF00;
+  cursor: pointer;
+}
+
+.login-btn:hover {
+  background-color: #FFA500;
+}
+
+/*Estilos del Contenido Principal*/
 main {
   padding: 1rem;
 }
   
-h1 {
-  font-size: 2rem;
+.intro-subtitle{
+  justify-content: center;
 }
   
-form label {
-  display: block;
-  margin-top: 1rem;
-}
-  
-form input[type="text"],
-form input[type="email"],
-form input[type="password"],
-form input[type="tel"],
-form textarea {
-  display: block;
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-}
-  
-  form input[type="submit"] {
-    background-color: #333;
-    color: white;
-    padding: 0.5rem 1rem;
-    border: none;
-    cursor: pointer;
-  }
-  
+
+  /*Estilos del Footer*/
   footer {
     background-color: #8FBC8F;
     color: white;
@@ -187,11 +207,7 @@ form textarea {
     flex: 1;
   }
   
-  h1 {
-    text-align: center;
-    margin: 20px 0;
-  }
-  
+ 
 
   .text-main{
     font-size: 2.5rem;
@@ -253,11 +269,6 @@ img {
 .installments {
   color: #4CAF50;
 }
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
 
 .featured-products-title{
   font-size: 2.5rem;
@@ -283,9 +294,9 @@ h2 {
 .our-difference-text{
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  color: #333;
+  color: #000;
+
   text-align: center;
-  margin-left: 5rem;
 }
 
 .testimonials-section {
@@ -365,8 +376,98 @@ footer p{
 .difference-card-header {
   display: flex;
   align-items:baseline;
+  justify-content: center;
 }
 
 .our-difference-text {
   margin-top: 2rem;
+}
+
+
+/*  REGISTER  */
+
+
+  
+.register-container {
+  width: 80%;
+  margin: auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.menu {
+  display: flex;
+  justify-content: space-around;
+  background-color: #e8f5e9;
+  padding: 10px 0;
+  border-bottom: 1px solid #c8e6c9;
+}
+
+.menu a {
+  color: #388e3c;
+  text-decoration: none;
+}
+
+form {
+  width: 50%;
+  margin: auto;
+}
+
+label, input {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 2px;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+
+
+.input-field {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.input-field input {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9e9e9e;
+  outline: none;
+  transition: .3s;
+}
+
+.input-field input:focus + label,
+.input-field input:not(:placeholder-shown) + label {
+  transform: translateY(-14px);
+  font-size: 12px;
+  color: #9e9e9e;
+}
+
+.input-field label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 16px;
+  color: #9e9e9e;
+  transition: .3s;
 }
