--- a/Programación-Web-I/tp/CSS/style.css
+++ b/Programación-Web-I/tp/CSS/style.css
@@ -163,23 +163,7 @@ main {
     padding: 1rem;
     text-align: center;
   }
-  
-  .banner {
-    background-image:url(https://www.hardgamers.com.ar/public/images/country/ar/stores/integradosargentinos/banner-middle.gif); /* url('Banner_Desktop_HP_Laptop.jpg');*/
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 24px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    max-width: 1140px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
 
 .menu {
   background-color: #4CAF50;
@@ -228,7 +212,7 @@ main {
   padding: 20px;
 }
 
-.product-card {
+/* .product-card {
   width: 200px;
   padding: 20px;
   border: 1px solid #ccc;
@@ -238,36 +222,56 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
+} */
+.product-section {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
 }
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 20px;
+  text-align: center;
+}
+
+.product-card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-info h2 {
+  margin: 10px 0;
+}
+
+.product-info p {
+  margin: 0 0 10px 0;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
 
 img {
   max-width: 100%;
   max-height: 150px; 
-}
-
-.product-name {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.stock {
-  color: green;
-  font-weight: bold;
-}
-
-.out-of-stock {
-  color: red;
-  font-weight: bold;
-}
-
-.price {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 10px 0;
-}
-
-.installments {
-  color: #4CAF50;
 }
 
 .featured-products-title{
